Bug 108416 - RTF IMPORT: list numbering is bold in specific document where it should be regular
Summary: RTF IMPORT: list numbering is bold in specific document where it should be re...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4 all versions
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.0.0 target:5.4.0.1
Keywords: bibisected, bisected, filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2017-06-08 15:11 UTC by Mike Kaganski
Modified: 2021-04-14 11:09 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
RTF with list numbers importing bold (178.28 KB, application/msword)
2017-06-08 15:11 UTC, Mike Kaganski
Details
Minimal reproducer for bold numbering (19.50 KB, application/msword)
2017-06-09 14:04 UTC, Mike Kaganski
Details
The bug is not fixed (89.95 KB, image/png)
2017-06-24 12:55 UTC, ape
Details
How it was before (55.07 KB, image/png)
2017-06-25 10:21 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2017-06-08 15:11:01 UTC
Created attachment 133916 [details]
RTF with list numbers importing bold

In the attached file, list numbering is bold instead of regular.

Tested with current master and 5.3.3.2.
Comment 1 Xisco Faulí 2017-06-08 17:09:43 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.co.uk>	2014-09-25 19:29:00 (GMT)
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2014-09-25 19:29:00 (GMT)
commit c1f8437dbed0e8b989e41a345ef7e658a6e8a4cd (patch)
tree 1be63ae37ca941c29b6da2f13e7c7f8cca04fa53
parent fd0a49bdd7cf7979d18feff003d1b5fbe53fdc14 (diff)
fdo#83465 RTF import: handle font of numbering

Bisected with: bibisect-44max

Adding Cc: to Miklos Vajna
Comment 2 ape 2017-06-09 05:00:29 UTC
I confirm this bug.

Version: 5.4.0.0.alpha0+
Build ID: a917902c48f21d04039da86048c5c36555137d7e
CPU threads: 8; OS: Windows 5.2; UI render: default; 
TinderBox: Win-x86@62-TDF, Branch:MASTER, Time: 2017-04-24_23:35:22
Locale: ru-RU (ru_RU); Calc: group
Comment 3 ape 2017-06-09 06:57:46 UTC
I confirm this bug.

Version: 5.4.0.0.beta2
Build ID: 3cc1cdd8ee50f144e5514da51800a08119754d8f
CPU threads: 8; OS: Windows 5.2; UI render: default; 
Locale: en-US (en_US); Calc: group
Comment 4 Mike Kaganski 2017-06-09 14:04:13 UTC
Created attachment 133927 [details]
Minimal reproducer for bold numbering

@Miklos, or whoever decides to fix this: seems that the problem is related to the fields in last row (that are bold). E.g., removing lines 133-136 from attached minimal reproducer makes numbering in <B2> and <B3> non-bold (and also aligns both numbers uniformly).
Comment 5 Commit Notification 2017-06-20 07:21:35 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=67a0889450daa6b9c9c799dab2d9da3a5044cb5d

tdf#108416 RTF import: fix unexpected bold list numbering

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2017-06-20 14:06:18 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=24446c610a178f77f9a39d2713b9ac90677abd94&h=libreoffice-5-4

tdf#108416 RTF import: fix unexpected bold list numbering

It will be available in 5.4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 ape 2017-06-24 12:55:15 UTC
Created attachment 134246 [details]
The bug is not fixed

I confirm this bug.

Версия: 5.4.0.1
ID сборки: 962a9c4e2f56d1dbdd354b1becda28edd471f4f2
Потоков ЦП: 8; ОС:Windows 5.2; Отрисовка ИП: по умолчанию; 
Локаль: ru-RU (ru_RU); Calc: group
Comment 8 Xisco Faulí 2017-06-25 10:21:52 UTC
Created attachment 134259 [details]
How it was before
Comment 9 Xisco Faulí 2017-06-25 10:23:28 UTC
(In reply to ape from comment #7)
> Created attachment 134246 [details]
> The bug is not fixed
> 
> I confirm this bug.
> 
> Версия: 5.4.0.1
> ID сборки: 962a9c4e2f56d1dbdd354b1becda28edd471f4f2
> Потоков ЦП: 8; ОС:Windows 5.2; Отрисовка ИП: по умолчанию; 
> Локаль: ru-RU (ru_RU); Calc: group

Hi ape,
Please check how it was before on my screenshot. As you can see, (1) and (2) are bold while on your screenshot they aren't. The bug is fixed.
Comment 10 vihsa 2017-08-26 13:29:46 UTC Comment hidden (no-value)
Comment 11 Mike Kaganski 2017-08-28 07:38:52 UTC Comment hidden (no-value)