tdf#108416 RTF import: fix unexpected bold list numbering

Some paragraph-level run properties affect the current list style since
commit 2123ede032ca64f696ef54af4ad3238974ca2b5d (n#758883 dmapper:
paragraph-level run props should affect numberings as well, 2012-06-19).
This was extended for any run properties in case of RTF since commit
c1f8437dbed0e8b989e41a345ef7e658a6e8a4cd (fdo#83465 RTF import: handle
font of numbering, 2014-09-25), as RTF doesn't really separate the
paragraph-level and the other run properties.

However, field formatting clearly should affect only the field itself,
so disable this mechanism in that context.

(cherry picked from commit 67a0889450daa6b9c9c799dab2d9da3a5044cb5d)

Change-Id: I6df7488e99e44f3ba7e17bf09ce590c88151e043
Reviewed-on: https://gerrit.libreoffice.org/39013
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>